--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,45 @@
 
 }
 
+/* EDIT TABLE ADDITION */
+#editTable{
+	display: flex;
+	padding-top: 20px;
+	margin: 0 auto;
+    justify-content: center;
+    
+
+}
+
+@media screen and (min-width: 768px){
+    .col-md-2 {
+        -ms-flex: 0 0 16.666667%;
+        flex: 1 0 16.666667% !important;
+        max-width: 44.666667%;
+    }
+
+}
+
+
+#editTable form {
+    display: grid;
+    place-items: center;
+
+}
+
+.input-container {
+    display: none;
+}
+
+.block {
+    display: block;
+}
+
+.bg {
+    background-color: #ad9a9a;
+}
+@media screen and (min-width: 720px) {
+    #editTable {
+        max-width: 50%;
+    }
+}
