--- a/test.css
+++ b/test.css
@@ -3,7 +3,7 @@
 	padding-top: 20px;
 	margin: 0 auto;
     justify-content: center;
-    background-color: #ad9a9a;
+    
 
 }
 
@@ -33,8 +33,12 @@
 .block {
     display: block;
 }
+
+.bg {
+    background-color: #ad9a9a;
+}
 @media screen and (min-width: 720px) {
     #editTable {
-        max-width: 37%;
+        max-width: 50%;
     }
 }
