--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,11 @@
 	border-radius: .2rem;
 	font-weight: bold;
 }
+
+.table-striped tbody tr:nth-of-type(1n+1) {
+	background-color: rgba(0,0,0,.05);
+}
+
+.trow {
+    text-align: center;
+}
