added export as xl and removed some code
puted ut in dummy code

--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,12 @@
    margin: auto;
    width: 40%;
 }
+
+.btnsRow {
+   display: flex;
+   justify-content: space-evenly;
+}
+
+.btnsRow button {
+    margin: .320rem;
+}
